--- a/HaoChiBao/app/src/main/res/values/dimens.xml
+++ b/HaoChiBao/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="font_48">24sp</dimen>
+    <dimen name="font_44">22sp</dimen>
+    <dimen name="font_40">20sp</dimen>
+    <dimen name="font_36">18sp</dimen>
+    <dimen name="font_32">16sp</dimen>
+    <dimen name="font_28">14sp</dimen>
+    <dimen name="font_24">12sp</dimen>
+    <dimen name="font_20">10sp</dimen>
 </resources>
