--- a/HaoChiBao/app/src/main/res/layout/activity_register.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_register.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bgGrayWhite">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -114,6 +115,7 @@
                     android:textColor="@color/textGrayBlack"
                     android:layout_alignParentLeft="true"/>
                 <TextView
+                    android:id="@+id/fast_login"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="快速登陆"
