--- a/HaoChiBao/app/src/main/res/drawable/rb_top_right_normal.xml
+++ b/HaoChiBao/app/src/main/res/drawable/rb_top_right_normal.xml
@@ -4,5 +4,5 @@
         android:topRightRadius="40dp"/>
     <stroke android:color="@color/white"
         android:width="1dp"/>
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/mainRed"/>
 </shape>
